--- a/.gitignore
+++ b/.gitignore
@@ -158,6 +158,9 @@ cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/python
 
+# MacOS trash
+.DS_Store
+
 # Custom folders
 data/
 pretrained/
