--- a/environment_cpu.yml
+++ b/environment_cpu.yml
@@ -10,8 +10,11 @@ dependencies:
   - pytorch=1.11.0
   - torchtext=0.12
   - pip:
+    - scipy==1.8.0
+    - sklearn==1.0.2
     - datasets==2.0.0
     - nltk==3.7
     - pytorch-lightning==1.6.0
+    - tabulate==0.8.9
     - tensorboard==2.8.0
     - tqdm==4.62.3
